# OSAI-browser

./: .gitignore  Cargo.toml  README.md  TODO  memo  package-lock.json  package.json  vite.config.js
cli/src/: main.rs
dist_backup/: index.html
html/: index.html
osai-lib/: Cargo.toml
osai-lib/src/: http_server.rs  lib.rs  server.rs  server_list.rs
osai-lib/src/AI/: state.rs
osai_core/: Cargo.toml  README.md
osai_core/src/: lib.rs  main.rs
osai_core/src/ai/: hebbian_local.rs
osai_core/src/client/: client.rs
osai_core/src/server/: format_handler.rs  server.rs  server_signal.rs
osai_lib/: Cargo.toml  memo
osai_lib/src/: lib.rs  main.rs
osai_lib/src/ai/: chilk.rs  state.rs
osai_lib/src/client/: client.rs  client_file.rs  mod.rs
osai_lib/src/server/: file_server.rs  format_handler.rs  mod.rs  server_signal.rs
osai_lib/src/server/web/: http_server.rs  websocket.rs
share/: files.json
src/: main.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: OSAI_core.rs  ans.rs  base.rs  browser_base.rs  client.rs  client_file.rs  file_copy.rs  file_download.rs  file_read.rs  file_server.rs  format_handler.rs  general.rs  http_server.rs  index.html  main.rs  multiple.rs  server.rs  server_signal.rs  simple.rs  websocket.rs
src-tauri/src/AI/: hebbian_local.rs  state.rs
src_view/: README.md  index.html  index.js  package-lock.json  package.json  tsconfig.js  tsconfig.json  vite.config.js
src_view/backup/: ctrl-element.js  index.html  no_iframe.html  package-lock.json  utils.js
src_view/public/: p2p_control.html  world_page.html
src_view/src/: App.tsx  main.js  main.tsx  vite-env.d.ts
src_view/view/: app-element.js  eva.css  index.html  index.js  main.jsx  result-element.js  world_list.json  world_page.html
src_view/view/worlds/: game1.html
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.css  App.tsx  FileDropZone.tsx  file_list.tsx  main.tsx  p2p.tsx  p2p_control.html  share.tsx  wasm_loader.tsx  world_page.tsx  world_search.tsx
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src/assets/: Bobble.css  Bobble.tsx
tauri-app/src/style/: aqua.scss
