[package]
name = "osai_core"
version = "0.1.0"
edition = "2021"
license="MIT"
description = "Core logic for OSAI browser-based AI systems"
readme = "README.md"
keywords = ["OSAI", "AI", "WebSocket", "file_server"]
categories = ["network-programming", "web-programming::http-server"]


[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
hex = "0.4.3"
local-ip-address = "0.6.5"
once_cell = "1.21.3"
pnet = "0.35.0"
rand = "0.9.1"
reqwest = "0.12.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
warp = "0.3.7"


[[bin]]
name = "osai-runner"
path = "src/main.rs"
