[package]
name = "osai_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
hex = "0.4.3"
local-ip-address = "0.6.5"
once_cell = "1.21.3"
pnet = "0.35.0"
rand = "0.9.1"
reqwest = "0.12.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
warp = "0.3.7"


[[bin]]
name = "osai-runner"
path = "src/main.rs"
